User Photos now are properly cropped/sized in all areas. Fixed Commute points populating description instead of name.

--- a/SmartCommuteEmmet/wwwroot/css/site.css
+++ b/SmartCommuteEmmet/wwwroot/css/site.css
@@ -46,16 +46,31 @@ h1,h2{
     width:100%;
     margin:0 auto;
 }
+a{
+    color:white;
+    transition:color 0.5s;
+}
+a:hover{
+    color:cyan;
+    text-decoration:none;
+}
 
+/*Buttons*/
+.nav-pills{
+    background-color:darkcyan;
+    transition:background-color 0.5s;
+}
+.nav-pills > li:hover{
+    background-color:darkorange;
+}
 /*Images*/
 .thumbnailTiny {
     width: 50px;
     height: 50px;
     border-radius: 10px;
     display: inline;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
+    object-fit: cover;
+    margin-right: 10px;
 }
 
 .thumbnailNavBar {
@@ -63,19 +78,14 @@ h1,h2{
     height: 20px;
     border-radius: 3px;
     display: inline;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
+    object-fit:cover;
 }
 
 .profilePhoto {
     width: 100%;
     min-height: 250px;
     border-radius: 100%;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    object-fit:fill
+    object-fit:cover;
 }
 
 /*Profile*/
@@ -120,7 +130,14 @@ h1,h2{
 }
 
 .leaderboardNameDiv:hover{
+    background-color:darkorange;
+    color:white;
+}
+table{
     background-color:darkcyan;
+    color:white;
+}
+table a{
     color:white;
 }
 
